fix for: "Text size for collection editor is too small"

--- a/archetypes/trails-archetype/src/main/resources/archetype-resources/src/main/webapp/styles/tapestryskin/forms.css
+++ b/archetypes/trails-archetype/src/main/resources/archetype-resources/src/main/webapp/styles/tapestryskin/forms.css
@@ -388,3 +388,7 @@ li>input.button, li>button, input.button>input.button, button>button {
     text-align: left;
     padding: 0px;
 }
+
+table.editCollection a {
+	font-size: 1.6em;
+}
