--- a/examples/recipe/src/main/webapp/styles/forms.css
+++ b/examples/recipe/src/main/webapp/styles/forms.css
@@ -432,3 +432,7 @@ table.pickList td select {
     text-align: left;
     padding: 0;
 }
+
+table.editCollection a {
+	font-size: 1.6em;
+}
