--- a/examples/security/src/main/webapp/styles/tapestryskin/forms.css
+++ b/examples/security/src/main/webapp/styles/tapestryskin/forms.css
@@ -387,3 +387,7 @@ li>input.button, li>button, input.button>input.button, button>button {
     text-align: left;
     padding: 0px;
 }
+
+table.editCollection a {
+	font-size: 1.6em;
+}
